# NOVA-AI-ASSISTANT

./: NOVA_CORPUS_GAP_AUDIT_V30.json  NOVA_FINAL_VERIFICATION_REPORT.md  NOVA_RUNTIME_RESOLUTION_AUDIT_V30.json  NOVA_V30_REPORT.md  README.md  RUN_AFTER_PATCH_REMOVE_QWEN_CACHE.ps1  RUN_NOVA_V34_STATIC_GATE.cmd  analysis_options.yaml  build_log.txt  litertlm_dependency_tree.txt  nova_260426_critical_fix.diff  nova_audit_regex_hotfix.dart  nova_boot_real_cause_fix.patch  nova_full_runtime_log_collector.cmd  pubspec.yaml
android/app/src/main/cpp/: CMakeLists.txt  nova_faiss_android_compat.cpp  nova_faiss_bridge.cpp  nova_native_stub.cpp  nova_openmp_android_stub.cpp
lib/: main.dart
scripts/: install_faiss_source.sh
test/: widget_test.dart
tool/: nova_authority_audit.dart  nova_deep_project_audit.dart  nova_full_native_lib_audit.dart  nova_total_static_audit.dart  nova_v27_logic_liftoff_simulator.py  nova_v28_audit.py  nova_v28_compile_risk.py  nova_v34_static_runtime_gate.py  nova_v36_wrapper_contract_gate.py  nova_v37_call_feature_manifest.json  nova_v37_final_authority_and_call_compat_gate.py  nova_v38_security_passive_orientation_gate.py  nova_v39_local_model_scope_gate.py  vendor_litertlm_android.cmd  vendor_litertlm_android.ps1  verify_gemma4_runtime_patch.cmd  verify_gemma4_runtime_patch.ps1  verify_gemma4_strict_prebuild.cmd  verify_gemma4_strict_prebuild.ps1  verify_nova_liftoff_hard_fail_fix.cmd  verify_nova_liftoff_hard_fail_fix.ps1  verify_nova_liftoff_remaining_fail_fix.ps1  verify_nova_total_liftoff_all_systems.cmd  (+1 more)
web/: index.html  manifest.json
(+815 files in other folders)
